RESOLVED FIXED221858
[Mac] Sound does not play on YouTube after switching back to foreground
https://bugs.webkit.org/show_bug.cgi?id=221858
Summary [Mac] Sound does not play on YouTube after switching back to foreground
Jer Noble
Reported 2021-02-12 16:25:52 PST
[Mac] Sound does not play on YouTube after switching back to foreground
Attachments
Patch (4.34 KB, patch)
2021-02-12 16:29 PST, Jer Noble
eric.carlson: review+
ews-feeder: commit-queue-
Patch for landing (7.27 KB, patch)
2021-02-12 17:26 PST, Jer Noble
no flags
Jer Noble
Comment 1 2021-02-12 16:26:05 PST
Jer Noble
Comment 2 2021-02-12 16:29:38 PST
Jer Noble
Comment 3 2021-02-12 17:26:10 PST
Created attachment 420201 [details] Patch for landing
EWS
Comment 4 2021-02-12 20:36:35 PST
Committed r272829: <https://commits.webkit.org/r272829> All reviewed patches have been landed. Closing bug and clearing flags on attachment 420201 [details].
Note You need to log in before you can comment on or make changes to this bug.