Source/WebCore/testing/Internals.mm
@@ -103,6 +103,17 @@ double Internals::privatePlayerVolume(const HTMLMediaElement& element)
         return 0;
     return [player volume];
 }
+
+bool Internals::privatePlayerMuted(const HTMLMediaElement& element)
+{
+    auto corePlayer = element.player();
+    if (!corePlayer)
+        return false;
+    auto player = corePlayer->objCAVFoundationAVPlayer();
+    if (!player)
+        return false;
+    return [player isMuted];
+}
 #endif
 
 String Internals::encodedPreferenceValue(const String& domain, const String& key)
